--- a/autoProjectPages/01civic/civic.html
+++ b/autoProjectPages/01civic/civic.html
@@ -61,8 +61,8 @@ webcomics like XKCD or other picture-based 'stories' -->
             </p>
             <img src="../autoProjectImages/civicEngineSwap/03runningTest.jpg"
                 alt="An image of the gauge cluster, running">
-            <p>!!!!!Insert video here!</p>
-            <p>!!!!!Insert video2 here!</p>
+            <!-- <p>!!!!!Insert video here!</p>
+            <p>!!!!!Insert video2 here!</p> -->
         </div>
         <div id="theDonor">
             <h3>So, off to the pick'n'pull</h3>
