Tweaks and edits

--- a/programmingpages/dashboard/dashboard.html
+++ b/programmingpages/dashboard/dashboard.html
@@ -71,54 +71,8 @@
             </div>
             <div class="card">
                 This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
             </div>
             <div class="card">
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-            </div>
-            <div class="card">
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
                 This is a card!
             </div>
             <div class="card">
@@ -126,34 +80,8 @@
             </div>
             <div class="card">
                 This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
-                This is a card!
+            </div>
+            <div class="card">
                 This is a card!
             </div>
         </div>
@@ -171,5 +99,10 @@
             <a href="">Okay this one's in last place</a>
         </div>
     </div>
+    
+    <footer>
+        <p>Copyright Seth 2021-2022</p>
+        <p>Unless its Copyright The Odin Project 2021-2022</p>
+    </footer>
 </body>
 </html>
