Minor UI adjustments and fixed some links

--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
             </a>
         -->
         <div class="cards">
+            <div class="project">
+                <a href="programmingpages/progprojects.html">
+                    <img class="boxed" src="images/code.png" alt="An image of JS code">
+                </a>
+                <p>
+                    A page containing all of my own little programming or 
+                    web dev projects
+                </p>
+            </div>
             <a class="projectLink" style="display:block" href="autoProjectPages/autoProjects.html">
                 <div class="project" id="automotiveProjects">
                     <img class="boxed" src="images/truckdash.jpg" alt="A typical chevrolet gauge cluster" class="300pximg">
@@ -65,15 +74,6 @@
                     This part of the website is all about automotive detailing! I have some helpful links 
                     here for you to peruse, as well as what I've done with the knowledge I've 
                     gained from these resources!
-                </p>
-            </div>
-            <div class="project">
-                <a href="programmingpages/progprojects.html">
-                    <img class="boxed" src="images/code.png" alt="An image of JS code">
-                </a>
-                <p>
-                    A page containing all of my own little programming or 
-                    web dev projects
                 </p>
             </div>
             <div class="project">
@@ -96,16 +96,25 @@
             </div>
         </div>
     </div>
+        <div class="quote">
+            <!---this is listed on project example as a quote... or testimonial... I'll probably
+            do an inspiring quote I guess?-->
+            <p>
+                When in doubt, use brute force.
+            </p>
+            <p>-Ken Thompson</p>
+        </div>
+    <!-- </div>
     <div class="quote">
-        <!---this is listed on project example as a quote... or testimonial... I'll probably
-        do an inspiring quote I guess?-->
+        this is listed on project example as a quote... or testimonial... I'll probably
+        do an inspiring quote I guess
         <p>I'm a scientist; Because I invent, transform, create, and destroy for a living,
             and when I don't like something about the world, I change it"
         </p>
         <p>-Rick Sanchez</p>
-    </div>
-    <div class="call-to-action">
-        <!---Sign up for... something? by clicking on this link here!-->
+    </div> -->
+    <!-- <div class="call-to-action">
+        Sign up for... something? by clicking on this link here
         <div class="actiontext">
             <h2>Call to action! It's time!</h2>
             <p>Sign up to receive updates on any projects I do!</p>
@@ -113,7 +122,7 @@
         <button class="sign-up">
             <a href="sign-up" >Sign up!</a>
         </button>
-    </div>
+    </div> -->
     <footer>
         <p>Copyright Seth 2021-2022</p>
         <p>Unless its Copyright The Odin Project 2021-2022</p>
