--- a/programmingpages/calculator/calc.html
+++ b/programmingpages/calculator/calc.html
@@ -21,9 +21,15 @@
     </header>   
     <div class="nav">
         <p>
-            Nav Bar / Tool bar
+            Nav Bar 
         </p>
-        <a href="">Insert Thing Here</a>
+        <a href="../dashboard/dashboard.html">Dashboard</a>
+        <a href="../etchasketch/etchasketch.html">Etch-A-Sketch</a>
+        <a href="../library/library.html">Library</a>
+        <a href="../restaurant/dist/index.html">Restaurant</a>
+        <a href="../rps/rps.html">Rock Paper Scissors</a>
+        <a href="../ticTacToe/ticTacToe.html">Tic-Tac-Toe</a>
+        <a href="../todoList/dist/index.html">ToDo List</a>
     </div>
     <div id="calculator">
         <div class="display">
