--- a/programmingpages/ticTacToe/ticTacToe.html
+++ b/programmingpages/ticTacToe/ticTacToe.html
@@ -27,11 +27,12 @@
             Nav Bar / Tool bar
         </p>
         <a href="../calculator/calc.html">Calculator</a>
-        <a href="../dashboard/dashboard.html">Example Dashboard</a>
-        <a href="../etchasketch/etchasketch.html">Etch A Sketch</a>
-        <a href="../library/library.html">A Library App</a>
-        <a href="../rps/rps.html">Rock Paper Scissors</a>
+        <a href="../dashboard/dashboard.html">Dashboard</a>
+        <a href="../etchasketch/etchasketch.html">Etch-A-Sketch</a>
+        <a href="../library/library.html">Library</a>
         <a href="../restaurant/dist/index.html">Restaurant</a>
+        <a href="../rps/rps.html">Rock Paper Scissors</a>
+        <a href="../todoList/dist/index.html">ToDo List</a>
     </div>
     <div id="gameWindow">
         <div id="turnDisplay">
