Updated default marker color

--- a/programmingpages/etchasketch/etchasketch.html
+++ b/programmingpages/etchasketch/etchasketch.html
@@ -30,7 +30,7 @@
         min="0" max="250" ></input>
         <div id="number_of_cells_value">125</div>
         <label for="color_picker">Color of Marker</label>
-        <input type="color" name="color_picker" id="color_picker">
+        <input type="color" name="color_picker" id="color_picker" default="white">
         <label for="background-color">Background Color</label>
         <input type="color" name="background-color" id="background-color">
         <button id="create_game">Create</button>
