Navigation dots working, wraps to beginning now

--- a/autoProjectPages/01civic/civic.html
+++ b/autoProjectPages/01civic/civic.html
@@ -200,9 +200,14 @@ webcomics like XKCD or other picture-based 'stories' -->
                 </p>
             </div>
             <div class="bell_housing">
-                
                 <img src="../autoProjectImages/civicEngineSwap/22inspectingBell.jpg"
                     alt="Inspecting the bell housing attachment point">
+                <p>
+                    Here I'm inspecting the bell housing attachment points to ensure
+                    there will be no issues mating the transmission to the engine. Also,
+                    these bolt holes are used to mount the engine to the engine stand,
+                    and to attach the lifting chains.
+                </p>
             </div>
             <div class="sensors">
                 <img src="../autoProjectImages/civicEngineSwap/23inspectingSensors.jpg"
@@ -215,6 +220,11 @@ webcomics like XKCD or other picture-based 'stories' -->
             </div>
             <div class="mating_engine_trans">
                 <img src="../autoProjectImages/civicEngineSwap/23-5engineTransMated.jpg" alt="Engine and Trans mated together">
+                <p>
+                    Here we began the process of mating the engine and transmission
+                    outside of the engine bay. This is the easiest method to pull or
+                    install the engine and transmission assembly.
+                </p>
             </div>
             <div id="installingEngine"><img src="../autoProjectImages/civicEngineSwap/24partsComingIn.jpg"
                 alt="Engine and transmission in the engine bay!">   
