Updated styling, removed unused sign up button

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                     Plus, some of my favorite things!
                     Enjoy!
                 </p>
-                <button class="sign-up">
+                <!-- <button class="sign-up">
                     <a href="sign-up">Sign up!</a>
-                </button>
+                </button> -->
             </div>
             <img src="images/rpipixabay.jpg" alt="An example of a Raspberry Pi" class="300pximg">
         </div>
