Started working on waterio

--- a/programmingpages/progprojects.html
+++ b/programmingpages/progprojects.html
@@ -77,6 +77,13 @@
                 </a>
             </div>
             <div class="project">
+                <a href="./dashboardMobile/dashboardMobile.html">
+                    <img class="boxed" src="" 
+                    alt="Template">
+                    <p>A mobile-friendly version of 'dashboard'<p>
+                </a>
+            </div>
+            <div class="project">
                 <a href="./library/library.html">
                     <img class="boxed" src="webDevImages/libraryIcon.jpg" alt="A Giant book">
                     <p>A Library to keep track of your books and reading progress<p>
