--- a/programmingpages/ticTacToe/ticTacToe.html
+++ b/programmingpages/ticTacToe/ticTacToe.html
@@ -28,6 +28,7 @@
         </p>
         <a href="../calculator/calc.html">Calculator</a>
         <a href="../dashboard/dashboard.html">Dashboard</a>
+        <!-- <a href="../dashboardMobile/dashboardMobile.html">Dashboard Mobile</a> -->
         <a href="../etchasketch/etchasketch.html">Etch-A-Sketch</a>
         <a href="../library/library.html">Library</a>
         <a href="../restaurant/dist/index.html">Restaurant</a>
