--- a/programmingpages/calculator/calc.html
+++ b/programmingpages/calculator/calc.html
@@ -24,6 +24,7 @@
             Nav Bar 
         </p>
         <a href="../dashboard/dashboard.html">Dashboard</a>
+        <!-- <a href="../dashboardMobile/dashboardMobile.html">Mobile Dashboard</a> -->
         <a href="../etchasketch/etchasketch.html">Etch-A-Sketch</a>
         <a href="../library/library.html">Library</a>
         <a href="../restaurant/dist/index.html">Restaurant</a>
