Updated links, layout, and descriptions

--- a/index.html
+++ b/index.html
@@ -54,28 +54,34 @@
                     <img class="boxed" src="images/code.png" alt="An image of JS code">
                 </a>
                 <p>
-                    A page containing all of my own little programming or 
-                    web dev projects
+                    A journey through my web development projects
                 </p>
             </div>
             <a class="projectLink" style="display:block" href="autoProjectPages/autoProjects.html">
                 <div class="project" id="automotiveProjects">
                     <img class="boxed" src="images/truckdash.jpg" alt="A typical chevrolet gauge cluster" class="300pximg">
                     <p>
-                        A portfolio of automotive projects, ranging from attempting
-                        to modernize a 1995 Chevrolet truck to swapping an engine
-                        in a 2007-ish Honda Civic
+                        My automotive projects, currently consisting of an
+                        engine swap in a Honda Civic and hacking together an OBD reader
+                        using Python
                     </p>
                 </div>
             </a>
-            <div class="project">
+            <!-- <div class="project">
                 <img class="boxed" src="images/autodetailing.jpg" alt="Paint correction of acid rain etching">
                 <p>
                     This part of the website is all about automotive detailing! I have some helpful links 
                     here for you to peruse, as well as what I've done with the knowledge I've 
                     gained from these resources!
                 </p>
-            </div>
+            </div> -->
+        </div>
+
+        <div class="learnmore">
+            <h2>And here's my food, dog, and cat taxes</h2>
+        </div>
+        <div class="cards">
+
             <div class="project">
                 <img class="boxed" src="images/fudgestripescrop.jpg" alt="A fresh fudge stripe cookie hovering over milk">
                 <p>
@@ -85,7 +91,7 @@
             <div class="project">
                 <img class="boxed" src="images/dogtax.jpg" alt="A beautiful black and white dog">
                 <p>
-                    Here's my dog tax.
+                    She's a good one.
                 </p>
             </div>
             <div class="project">
