Basic home page for water.io created

--- a/programmingpages/progprojects.html
+++ b/programmingpages/progprojects.html
@@ -76,13 +76,13 @@
                     <p>A dashboard template page built using Grid and CSS.<p>
                 </a>
             </div>
-            <div class="project">
+            <!-- <div class="project">
                 <a href="./dashboardMobile/dashboardMobile.html">
                     <img class="boxed" src="" 
                     alt="Template">
                     <p>A mobile-friendly version of 'dashboard'<p>
                 </a>
-            </div>
+            </div> -->
             <div class="project">
                 <a href="./library/library.html">
                     <img class="boxed" src="webDevImages/libraryIcon.jpg" alt="A Giant book">
