--- a/programmingpages/progprojects.html
+++ b/programmingpages/progprojects.html
@@ -114,6 +114,13 @@
                         storage and WebPack<p>
                 </a>
             </div>
+            <div class="project">
+                <a href="./loginForm/loginForm.html">
+                    <img class="boxed" src="images/login.jpg" 
+                    alt="loginForm">
+                    <p>A login/sign-up form with custom JS validation<p>
+                </a>
+            </div>
         </div>
     </div>
     <div class="quote">
