--- a/programmingpages/progprojects.html
+++ b/programmingpages/progprojects.html
@@ -121,6 +121,13 @@
                     <p>A login/sign-up form with custom JS validation<p>
                 </a>
             </div>
+            <div class="project">
+                <a href="./weatherApp/dist/index.html">
+                    <img class="boxed" src="./images/storm.jpg" 
+                    alt="Template">
+                    <p>Prototype weather app<p>
+                </a>
+            </div>
         </div>
     </div>
     <div class="quote">
