Fixed CSS for civic, obdreader in autoProjects.css

--- a/autoProjectPages/01civic/civic.html
+++ b/autoProjectPages/01civic/civic.html
@@ -42,8 +42,8 @@ webcomics like XKCD or other picture-based 'stories' -->
         <h2 id="title">Knock Knock, Who's There</h2>
         <button id="left_arrow">&#8653;</button>
         <div id="slideshow">
-            
-            <div id="intro">
+
+            <div id="intro" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/01civicDelivery.jpg" alt="Delivery of the Civic">
 
                 <p>
@@ -53,12 +53,12 @@ webcomics like XKCD or other picture-based 'stories' -->
                     otherwise he didn't know what was wrong with it.
                 </p>
             </div>
-            <div class="heading">
+            <div class="heading" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/02civicDelivery.jpg" alt="Civic off the trailer">
 
                 <h3>He said it wouldn't start</h3>
             </div>
-            <div id="runTest">
+            <div id="runTest" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/03runningTest.jpg"
                     alt="An image of the gauge cluster, running">
 
@@ -69,14 +69,14 @@ webcomics like XKCD or other picture-based 'stories' -->
                 <!-- <p>!!!!!Insert video here!</p>
                 <p>!!!!!Insert video2 here!</p> -->
             </div>
-            <div id="theDonor">
+            <div id="theDonor" class="slide">
                 <h3>So, off to the pick'n'pull</h3>
                 <p>
                     I kept an eye on the local pick'n'pull's inventory for a Civic to
                     show up with an R18 engine. Finally, one showed up.
                 </p>
             </div>
-            <div class="the_choice">
+            <div class="the_choice" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/07theChoice.jpg" alt="The donor Civic">
                 <p>
                     With my dad's help, we started removing the extra components we
@@ -84,7 +84,7 @@ webcomics like XKCD or other picture-based 'stories' -->
                     that were holding the engine in.
                 </p>
             </div>
-            <div class="ready_to_lift">
+            <div class="ready_to_lift" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/08readyToLift.jpg"
                     alt="Everything disconnected, ready to lift">
                 <p>
@@ -93,14 +93,14 @@ webcomics like XKCD or other picture-based 'stories' -->
                     Then, we lifted.
                 </p>
             </div>
-            <div class="on_the_way_out">
+            <div class="on_the_way_out" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/09onTheWayOut.jpg" alt="Pulling out the engine">
                 <p>
                     We had some trouble getting the torque converter to stay in the
                     transmission, but eventually got it separated and the engine out.
                 </p>
             </div>
-            <div class="engine_pulled">
+            <div class="engine_pulled" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/10enginePulled.jpg" alt="Engine on the cart">
                 <p>
                     And checked out of the pick'n'pull! We actually were able to get
@@ -109,7 +109,7 @@ webcomics like XKCD or other picture-based 'stories' -->
                 </p>
                 <!-- <img src="../autoProjectImages/civicEngineSwap/11checkout.jpg" alt="Checking out at the pick'n'pull"> -->
             </div>
-            <div class="engine_pulled">
+            <div class="engine_pulled" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/12headingHome.jpg" alt="Engine in truck bed">
 
                 <p>
@@ -117,7 +117,7 @@ webcomics like XKCD or other picture-based 'stories' -->
                     bed.
                 </p>
             </div>
-            <div id="theVictim">
+            <div id="theVictim" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/13restingPlace.jpg"
                     alt="The Civic resting on a pallet infront of the recipient">
 
@@ -129,7 +129,7 @@ webcomics like XKCD or other picture-based 'stories' -->
                     smoothly as possible.
                 </p>
             </div>
-            <div class="wrapped">
+            <div class="wrapped" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/14weatherWrap.jpg"
                     alt="Donor engine, wrapped to protect it from the weather">
 
@@ -139,23 +139,23 @@ webcomics like XKCD or other picture-based 'stories' -->
                     blown engine to be pulled.
                 </p>
             </div>
-            <div class="clear_way">
+            <div class="clear_way" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/15clearingTheWay.jpg" alt="An in-progress picture of clearing the accessories off the
                     blown engine">
-                    <p>
-                        I wrapped up the donor engine with some plastic to protect it from
-                        any potential rain. I'm taking my time, and don't want to rush or
-                        burn out.
-                    </p>
+                <p>
+                    I wrapped up the donor engine with some plastic to protect it from
+                    any potential rain. I'm taking my time, and don't want to rush or
+                    burn out.
+                </p>
             </div>
-            <div class="ac_system">
+            <div class="ac_system" class="slide">
                 <p>
                     I didn't want to have to evacuate or refill the A/C system or power
                     steering <sup>(not pictured)</sup>, so I made sure they were out of
                     the way for pulling the engine.
                 </p>
             </div>
-            <div class="engine_stand">
+            <div class="engine_stand" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/17engineStand.jpg"
                     alt="Getting the donor engine on an engine stand">
                 <p>
@@ -163,8 +163,9 @@ webcomics like XKCD or other picture-based 'stories' -->
                     donor engine on an engine stand so that I could swap over accessories.
                 </p>
             </div>
-            <div class="engine_out">
-                <img src="../autoProjectImages/civicEngineSwap/18blownEngineOut.jpg" alt="Blown engine, removed from Civic">
+            <div class="engine_out" class="slide">
+                <img src="../autoProjectImages/civicEngineSwap/18blownEngineOut.jpg"
+                    alt="Blown engine, removed from Civic">
                 <p>
                     Aaaaand it's out! We struggled some, but we were able to pull both
                     the engine and transmission together. This will be useful, as I have
@@ -177,18 +178,18 @@ webcomics like XKCD or other picture-based 'stories' -->
                 <iframe width="420" height="315" src="https://youtube.com/shorts/K-CxZdj4Awc?feature=share">
                 </iframe> -->
             </div>
-            <div id="swappingComponents">
+            <div id="swappingComponents" class="slide">
                 <p>
                     !!!!!Insert video here of knock knock, looking at rod bearing assembly
                 </p>
                 <p>
-                    
+
                     I minimized the accessories on the donor engine when we pulled it,
                     and some of the accessories on the recipient are in better condition.
                     So, begins the process of swapping over components.
                 </p>
             </div>
-            <div class="less_carbon">
+            <div class="less_carbon" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/21inspectingCamCover.jpg" alt="Inspecting the cam cap">
                 <p>
                     Unfortunately, due to rain interrupting nearly every day of work,
@@ -199,7 +200,7 @@ webcomics like XKCD or other picture-based 'stories' -->
                     compared to the 170,000 mile engine the Civic originally had.
                 </p>
             </div>
-            <div class="bell_housing">
+            <div class="bell_housing" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/22inspectingBell.jpg"
                     alt="Inspecting the bell housing attachment point">
                 <p>
@@ -209,7 +210,7 @@ webcomics like XKCD or other picture-based 'stories' -->
                     and to attach the lifting chains.
                 </p>
             </div>
-            <div class="sensors">
+            <div class="sensors" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/23inspectingSensors.jpg"
                     alt="Inspecting the sensors on the front of the engine">
                 <p>
@@ -218,23 +219,24 @@ webcomics like XKCD or other picture-based 'stories' -->
                     trans and the engine for installation.
                 </p>
             </div>
-            <div class="mating_engine_trans">
-                <img src="../autoProjectImages/civicEngineSwap/23-5engineTransMated.jpg" alt="Engine and Trans mated together">
+            <div class="mating_engine_trans" class="slide">
+                <img src="../autoProjectImages/civicEngineSwap/23-5engineTransMated.jpg"
+                    alt="Engine and Trans mated together">
                 <p>
                     Here we began the process of mating the engine and transmission
                     outside of the engine bay. This is the easiest method to pull or
                     install the engine and transmission assembly.
                 </p>
             </div>
-            <div id="installingEngine"><img src="../autoProjectImages/civicEngineSwap/24partsComingIn.jpg"
-                alt="Engine and transmission in the engine bay!">   
+            <div id="installingEngine" class="slide"><img src="../autoProjectImages/civicEngineSwap/24partsComingIn.jpg"
+                    alt="Engine and transmission in the engine bay!">
                 <p>
                     Unfortunately the installation of the engine was all hands on
                     deck, and we weren't able to capture any images of the actual
                     engine and transmission installation, but here it is!
                 </p>
-                 </div>
-            <div class="first_test_run">
+            </div>
+            <div class="first_test_run" class="slide">
                 <p>
                     I ran the engine for all of 10 seconds to ensure I didn't hear
                     any awful noises - But with the catalytic converter not installed,
@@ -242,7 +244,7 @@ webcomics like XKCD or other picture-based 'stories' -->
                     noises. It certainly sounded better than the old engine!
                 </p>
             </div>
-            <div class="accessories_installed">
+            <div class="accessories_installed" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/25moreComplete.jpg" alt="More parts in engine bay">
                 <p>
                     Here you can see many of the accessories have been installed,
@@ -250,7 +252,7 @@ webcomics like XKCD or other picture-based 'stories' -->
                     air intake, and more.
                 </p>
             </div>
-            <div class="radiator_installed">
+            <div class="radiator_installed" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/26radIn.jpg" alt="Radiator installed">
                 <p>
                     Then in goes the radiator, after inspecting to ensure that nothing
@@ -259,8 +261,9 @@ webcomics like XKCD or other picture-based 'stories' -->
                     as any hoses for the cooling system, vacuum, and EGR systems.
                 </p>
             </div>
-            <div class="radiator_support_installed">
-                <img src="../autoProjectImages/civicEngineSwap/27radBraceIn.jpg" alt="Installation of the radiator support">
+            <div class="radiator_support_installed" class="slide">
+                <img src="../autoProjectImages/civicEngineSwap/27radBraceIn.jpg"
+                    alt="Installation of the radiator support">
                 <p>
                     Here is after I installed the radiator support. Not pictured is
                     all of the brackets in the rear of the engine secured, installation
