--- a/autoProjectPages/02obdReader/obdReader.html
+++ b/autoProjectPages/02obdReader/obdReader.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,11 @@
     <link rel="stylesheet" href="../subPages.css">
     <title>My DIY OBD 1 and 2 reader</title>
 </head>
+
 <body>
     <header>
-        <img src="../../images/logo.png" alt="My personal logo here">
-            <!---insert stuff here -->
+        <img id="logo" src="../../images/logo.png" alt="My personal logo here">
+        <!---insert stuff here -->
         <div class="rightLinks">
             <a href="/index.html">Home</a>
             <a href="../autoProjects.html">Auto Projects</a>
@@ -29,45 +31,43 @@
     </div>
     <div class="content">
         <div class="project">
-            <img src="../autoProjectImages/obdReader/20220423_175921.jpg" 
-            alt="An overview of the OBD2-reader set up">
+            <img src="../autoProjectImages/obdReader/20220423_175921.jpg" alt="An overview of the OBD2-reader set up">
             <p>
                 An overview of the brain of the OBD 1 and 2 reader
             </p>
         </div>
         <div class="project">
-            <img src="../autoProjectImages/obdReader/20220423_175925.jpg" 
-            alt="The connector to use the OBD1-reader wires">
+            <img src="../autoProjectImages/obdReader/20220423_175925.jpg"
+                alt="The connector to use the OBD1-reader wires">
             <p>
                 The OBD1 wires that are plugged into the board
             </p>
         </div>
         <div class="project">
-            <img src="../autoProjectImages/obdReader/20220423_175934.jpg" 
-            alt="The serial-to-OBD2 male plug">
+            <img src="../autoProjectImages/obdReader/20220423_175934.jpg" alt="The serial-to-OBD2 male plug">
             <p>
                 The serial-to-OBD2 male plug
             </p>
         </div>
         <div class="project">
-            <img src="../autoProjectImages/obdReader/20220423_175939.jpg" 
-            alt="The other end of the serial-to-OBD2 cable">
+            <img src="../autoProjectImages/obdReader/20220423_175939.jpg"
+                alt="The other end of the serial-to-OBD2 cable">
             <p>
                 The serial end of the serial-to-OBD2 cable
             </p>
         </div>
         <div class="project">
-            <img src="../autoProjectImages/obdReader/20220423_175942.jpg" 
-            alt="The serial port for connection to the vehicle">
+            <img src="../autoProjectImages/obdReader/20220423_175942.jpg"
+                alt="The serial port for connection to the vehicle">
             <p>
                 The serial port of the OBD to USB converter
             </p>
         </div>
         <div class="project">
-            <img src="../autoProjectImages/obdReader/20220423_175946.jpg" 
-            alt="The wires used to connect to the proper 2 pins on the OBD female end">
+            <img src="../autoProjectImages/obdReader/20220423_175946.jpg"
+                alt="The wires used to connect to the proper 2 pins on the OBD female end">
             <p>
-                The OBD1 wires used to interface with [what pins?] of the OBD1 
+                The OBD1 wires used to interface with [what pins?] of the OBD1
                 or ALDL female plug in the truck
             </p>
         </div>
@@ -77,4 +77,5 @@
         <p>Unless its Copyright The Odin Project 2021-2022</p>
     </footer>
 </body>
+
 </html>
